# snake

./: CMakeLists.txt  conanfile.txt
src/: Directions.h  Game.cpp  Game.h  Grid.cpp  Grid.h  main.cpp
src/grid/: Candy.cpp  Candy.h  GridItem.cpp  GridItem.h  SnakeBody.cpp  SnakeBody.h
